Fix slider z-index issue

--- a/src/styles/components/form/fields/_slider.scss
+++ b/src/styles/components/form/fields/_slider.scss
@@ -148,7 +148,7 @@ $module-name: form-field-slider;
     position: absolute;
     top: $height * 0.5;
     transform: translate(-50%, -50%);
-    z-index: 400;
+    z-index: var(--z-default);
     width: $touch-height;
     height: $touch-height;
     cursor: pointer;
@@ -160,7 +160,7 @@ $module-name: form-field-slider;
     position: absolute;
     top: $height * 0.5;
     transform: translate(-50%, -50%);
-    z-index: 300;
+    z-index: var(--z-default);
     width: $touch-height;
     height: $touch-height;
     border: 0;
